<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/divider">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView android:id = "@+id/txCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="40px"
        android:text= "@string/CriarConta"
        android:textSize="50px"
        />

    <ImageView
        android:id = "@+id/UserPhoto"
        android:src = "@drawable/ic_account_circle"
        android:layout_centerHorizontal="true"
        android:layout_width="280px"
        android:layout_height="280px"
        android:layout_below="@id/txCreateAccount"
        android:layout_marginTop="60px"
        />
    <ImageView
        android:layout_width="80px"
        android:layout_height="80px"
        android:layout_alignEnd="@id/UserPhoto"
        android:layout_alignBottom="@id/UserPhoto"
        android:background="@drawable/circle_background"
        android:src = "@drawable/ic_add_photo_white"
        android:scaleType="center"
        android:translationX="-20px"
        android:onClick = "setNewImage"
        />
    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_below="@id/UserPhoto"
        android:layout_marginTop="40px"/>

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_below="@+id/divider">

            <android.support.design.widget.TextInputLayout
                android:id = "@+id/emailCreateAccount"
                android:layout_width = "400px"
                android:layout_height="100px"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8px"
                android:layout_marginTop="40px"
                app:hintTextAppearance="@style/TextAppearanceNewAccount"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id = "@+id/emailTextBoxNewAccount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint = "@string/email" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/AlertaEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/emailCreateAccount"
                android:layout_centerHorizontal="true"
                android:paddingTop = "5px"
                android:textColor="@color/colorAccent"
                android:textSize= "20px"
                />

            <android.support.design.widget.TextInputLayout
                android:id = "@+id/SenhaNewAccount"
                android:layout_width = "400px"
                android:layout_height="100px"
                android:layout_below="@id/emailCreateAccount"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8px"
                android:layout_marginTop="40px"
                app:hintTextAppearance="@style/TextAppearanceNewAccount"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id = "@+id/SenhaTextBoxNewAccount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint = "@string/senha" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id = "@+id/RepeteSenhaNewAccount"
                android:layout_width = "400px"
                android:layout_height="100px"
                android:layout_below="@id/SenhaNewAccount"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8px"
                android:layout_marginTop="40px"
                app:hintTextAppearance="@style/TextAppearanceNewAccount"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id = "@+id/RepeteSenhaTextBoxNewAccount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint = "@string/RepeteSenha" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/AlertaSenha"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/RepeteSenhaNewAccount"
                android:layout_centerHorizontal="true"
                android:paddingTop = "5px"
                android:textColor="@color/colorAccent"
                android:textSize= "20px"
                />

            <android.support.design.widget.TextInputLayout
                android:id = "@+id/NomeCompletoNewAccount"
                android:layout_width = "400px"
                android:layout_height="100px"
                android:layout_below="@id/RepeteSenhaNewAccount"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8px"
                android:layout_marginTop="40px"
                app:hintTextAppearance="@style/TextAppearanceNewAccount"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id = "@+id/NomeCompletoTextBoxNewAccount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint = "@string/NomeCompleto" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/AlertaNomeCompleto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/NomeCompletoNewAccount"
                android:layout_centerHorizontal="true"
                android:paddingTop = "5px"
                android:textColor="@color/colorAccent"
                android:textSize= "20px"
                />
            <Button
                android:layout_below = "@id/NomeCompletoNewAccount"
                android:layout_width="280px"
                android:layout_height="100px"
                android:text="@string/btnCriarConta"
                android:theme = "@style/strButton"
                android:layout_marginTop="40px"
                android:layout_centerHorizontal="true"
                android:onClick="createNewAccount"
                android:layout_marginBottom="40px"
                />
        </RelativeLayout>

    </RelativeLayout>
    </ScrollView>